Threads example: Fix build on Visual Studio

We need to include <memory> for unique_* on Visual Studio, and for Visual
Studio 2013 builds, we need to ensure that glibmmconfig.h is included so
that noexcept is supported.

https://bugzilla.gnome.org/show_bug.cgi?id=760612